modified top nav and hud. took away menu text, just pure iconage.

--- a/hoe-house/html/lua/plates.html
+++ b/hoe-house/html/lua/plates.html
@@ -160,9 +160,9 @@
 
 $(document).ready(function() {
 $("#menu_hover").hover(function(){
-		$("#menu_hover").stop(true,true).animate({height:130,width:380});
+		$("#menu_hover").stop(true,true).animate({height:130,width:360});
 	},function(){
-		$("#menu_hover").stop(true,true).animate({height:61,width:125});
+		$("#menu_hover").stop(true,true).animate({height:61,width:70});
 	});
 });
 
@@ -171,9 +171,9 @@ $("#menu_hover").hover(function(){
 <div class="cont">
 	<div id="menu_hover">
 	<div class="chunk4">
-		<div class="acta">
-			<div class="actpa">
-				<a href="{H.url_base}"><img src="/art/menu.png" width="30" height="30" style="vertical-align:middle;"></a> MENU
+		<div class="act">
+			<div class="actp">
+				<a href="{H.url_base}"><img src="/art/menu.png" width="30" height="30"></a>
 			</div>
 		</div>
 	</div>
@@ -315,12 +315,12 @@ $("#menu_hover").hover(function(){
 				</div>
 			</div>
 			<div class="hudline"></div>
-			<div class="hud2">
-				<div class="hud2it">
+			<div class="hud1">
+				<div class="hudit">
 					<i>{player.sticks}</i>
 				</div>
-				<div class="hud2">
-					<div class="hud2n">
+				<div class="hud1">
+					<div class="hudn">
 						<img src="/art/sticksb.png"> Sticks
 					</div>
 				</div>
