resized top nav for better fit between title header and hud.

--- a/hoe-house/html/lua/plates.html
+++ b/hoe-house/html/lua/plates.html
@@ -160,9 +160,9 @@
 
 $(document).ready(function() {
 $("#menu_hover").hover(function(){
-		$("#menu_hover").stop(true,true).animate({height:130,width:360});
+		$("#menu_hover").stop(true,true).animate({height:120,width:360});
 	},function(){
-		$("#menu_hover").stop(true,true).animate({height:61,width:70});
+		$("#menu_hover").stop(true,true).animate({height:60,width:67});
 	});
 });
 
@@ -172,7 +172,7 @@ $("#menu_hover").hover(function(){
 	<div id="menu_hover">
 	<div class="chunk4">
 		<div class="act">
-			<div class="actp">
+			<div class="actpa">
 				<a href="{H.url_base}"><img src="/art/menu.png" width="30" height="30"></a>
 			</div>
 		</div>
