fix urls of waka pages serv up .css chunk as css for the page

--- a/hoe-house/html/lua/plates.html
+++ b/hoe-house/html/lua/plates.html
@@ -14,8 +14,7 @@
 <script type="text/javascript" src="{jquery_js}"></script>
 <script type="text/javascript" src="{jquery_ui_js}"></script>
 <script type="text/javascript" src="{swfobject_js}"></script>
-
-
+{extra}
 
  </head>
 <body>
