--- a/hoe-house/html/lua/plates.html
+++ b/hoe-house/html/lua/plates.html
@@ -25,7 +25,7 @@
 	<div class="header" id="header">
 		<a href="/"><img src="/art/hoe.960x180.png" width="960" height="180"></a>
 		<a id="alfa" href="http://forum.wetgenes.com" target="_new"></a>
-		<a id="tv_switch" href="#" onclick='swfobject.embedSWF("http://www.wetgenes.com/link/WetV.swf", "header", "960", "480", "8");return false;'>Switch on TV?</a>
+		<a id="tv_switch" href="#" onclick='swfobject.embedSWF("http://www.wetgenes.com/link/WetV.swf", "header", "960", "480", "8");return false;'>TURN ON TV?</a>
 	</div>
 	<div class="line"></div>
 </div>
@@ -159,7 +159,7 @@
 
 $(document).ready(function() {
 $("#menu_hover").hover(function(){
-		$("#menu_hover").stop(true,true).animate({height:120,width:360});
+		$("#menu_hover").stop(true,true).animate({height:130,width:370});
 	},function(){
 		$("#menu_hover").stop(true,true).animate({height:60,width:67});
 	});
