--- a/hoe-house/html/lua/plates.html
+++ b/hoe-house/html/lua/plates.html
@@ -26,6 +26,7 @@
 		<a href="/"><img src="/art/hoe.960x180.png" width="960" height="180"></a>
 		<a id="alfa" href="http://forum.wetgenes.com" target="_new"></a>
 		<a id="tv_switch" href="#" onclick='swfobject.embedSWF("http://www.wetgenes.com/link/WetV.swf", "header", "960", "480", "8");return false;'>TURN ON TV?</a>
+		<a id="help" href="/help">DON'T PANIC.</a>
 	</div>
 	<div class="line"></div>
 </div>
