request denied. lol.

--- a/hoe-house/html/lua/plates.html
+++ b/hoe-house/html/lua/plates.html
@@ -729,6 +729,18 @@ Your hoes worked hard and farmed a total of <img src="/art/buxb.png"> <i>{total_
 {sbros}
 </div>
 
+#request_denied
+
+<div class="cont">
+<div class="chunk6">
+<div class="alert">
+WARNING: THIS ROUND IS NOW READ-ONLY.
+</div>
+
+<div class="clear"></div>
+</div>
+</div>
+
 #request_login
 
 <div class="cont">
