changed the way work alerts look. legibility has, hopefully, improved. changed fontage of list and hud to lucida sans-serif. added smiley help face.

--- a/hoe-house/html/lua/plates.html
+++ b/hoe-house/html/lua/plates.html
@@ -26,7 +26,7 @@
 		<a href="/"><img src="/art/hoe.960x180.png" width="960" height="180"></a>
 		<!--<a id="alfa" href="http://forum.wetgenes.com" target="_new"></a>-->
 		<a id="tv_switch" href="#" onclick='swfobject.embedSWF("http://www.wetgenes.com/link/WetV.swf", "header", "960", "480", "8");return false;'>TURN ON TV?</a>
-		<a id="help" href="/help" target="_blank" title="Opens Help in a new page.">DON'T PANIC.</a>
+		<!--<a id="help" href="/help" target="_blank" title="Opens Help in a new page.">DON'T PANIC.</a>-->
 	</div>
 	<div class="line"></div>
 </div>
@@ -78,6 +78,7 @@
 	<div class="chunk">
 		<div class="chunk1">
 			<div class="crum">
+				<div class="help"><a href="/help" target="_blank" title="Opens Help in a new page.">☺</a></div>
 				<div class="crumit">{crumbs}</div>
 			</div>
 		</div>
@@ -240,7 +241,7 @@ $("#menu_hover").hover(function(){
 				</div>
 				<div class="hud2">
 					<div class="hud2n">
-					<img src="/art/energyb.png"> Energy
+					<img src="/art/energyb.png"> energy
 					</div>
 				</div>
 			</div>
@@ -251,7 +252,7 @@ $("#menu_hover").hover(function(){
 				</div>
 				<div class="hud1">
 					<div class="hudn">
-						<img src="/art/buxb.png"> Bux
+						<img src="/art/buxb.png"> bux
 					</div>
 				</div>
 			</div>
@@ -262,7 +263,7 @@ $("#menu_hover").hover(function(){
 				</div>
 				<div class="hud2">
 					<div class="hud2n">
-						<img src="/art/hoesb.png"> Hoes
+						<img src="/art/hoesb.png"> hoes
 					</div>
 				</div>
 			</div>
@@ -273,7 +274,7 @@ $("#menu_hover").hover(function(){
 				</div>
 				<div class="hud2">
 					<div class="hud2n">
-						<img src="/art/glovesb.png"> Gloves
+						<img src="/art/glovesb.png"> gloves
 					</div>
 				</div>
 			</div>
@@ -284,7 +285,7 @@ $("#menu_hover").hover(function(){
 				</div>
 				<div class="hud2">
 					<div class="hud2n">
-						<img src="/art/housesb.png"> Houses
+						<img src="/art/housesb.png"> houses
 					</div>
 				</div>
 			</div>
@@ -295,7 +296,7 @@ $("#menu_hover").hover(function(){
 				</div>
 				<div class="hud2">
 					<div class="hud2n">
-						<img src="/art/shitb.png"> Manure
+						<img src="/art/shitb.png"> manure
 					</div>
 				</div>
 			</div>
@@ -306,7 +307,7 @@ $("#menu_hover").hover(function(){
 				</div>
 				<div class="hud2">
 					<div class="hud2n">
-						<img src="/art/scareb.png"> Bros
+						<img src="/art/scareb.png"> bros
 					</div>
 				</div>
 			</div>
@@ -317,7 +318,7 @@ $("#menu_hover").hover(function(){
 				</div>
 				<div class="hud1">
 					<div class="hudn">
-						<img src="/art/sticksb.png"> Sticks
+						<img src="/art/sticksb.png"> sticks
 					</div>
 				</div>
 			</div>
@@ -328,7 +329,7 @@ $("#menu_hover").hover(function(){
 				</div>
 				<div class="hud1">
 					<div class="hudn">
-						<img src="/art/scoreb.png"> Score
+						<img src="/art/scoreb.png"> score
 					</div>
 				</div>
 			</div>
@@ -502,13 +503,13 @@ $("#menu_hover").hover(function(){
 	<div class="illlist{random}"></div>
 	<div class="chunk8a">
 		<div class="chunk8b">
-			<div class="listat"><img src="/art/name.png"> Player Name</div>
-			<div class="listat"><img src="/art/scoreb.png"> Score</div>
-			<div class="listat"><img src="/art/buxb.png"> Bux</div>
-			<div class="listbt"><img src="/art/hoesb.png"> Hoes</div>
-			<div class="listbt"><img src="/art/housesb.png"> Houses</div>
-			<div class="listbt"><img src="/art/scareb.png"> Bros</div>
-			<div class="listct"><img src="/art/shoutb.png"> Shout</div>
+			<div class="listat"><img src="/art/name.png"> player name</div>
+			<div class="listat"><img src="/art/scoreb.png"> score</div>
+			<div class="listat"><img src="/art/buxb.png"> bux</div>
+			<div class="listbt"><img src="/art/hoesb.png"> hoes</div>
+			<div class="listbt"><img src="/art/housesb.png"> houses</div>
+			<div class="listbt"><img src="/art/scareb.png"> bros</div>
+			<div class="listct"><img src="/art/shoutb.png"> shout</div>
 		</div>
 		<div class="clear"></div>
 
@@ -516,13 +517,13 @@ $("#menu_hover").hover(function(){
 	
 		<div class="clear"></div>
 		<div class="chunk8b">
-			<div class="listat1"><img src="/art/name.png"> Player Name</div>
-			<div class="listat1"><img src="/art/scoreb.png"> Score</div>
-			<div class="listat1"><img src="/art/buxb.png"> Bux</div>
-			<div class="listbt1"><img src="/art/hoesb.png"> Hoes</div>
-			<div class="listbt1"><img src="/art/housesb.png"> Houses</div>
-			<div class="listbt1"><img src="/art/scareb.png"> Bros</div>
-			<div class="listct1"><img src="/art/shoutb.png"> Shout</div>
+			<div class="listat1"><img src="/art/name.png"> player name</div>
+			<div class="listat1"><img src="/art/scoreb.png"> score</div>
+			<div class="listat1"><img src="/art/buxb.png"> bux</div>
+			<div class="listbt1"><img src="/art/hoesb.png"> hoes</div>
+			<div class="listbt1"><img src="/art/housesb.png"> houses</div>
+			<div class="listbt1"><img src="/art/scareb.png"> bros</div>
+			<div class="listct1"><img src="/art/shoutb.png"> shout</div>
 		</div>
 		<div class="clear"></div>
 	</div>
@@ -686,11 +687,12 @@ Your hoes worked hard and farmed a total of <img src="/art/buxb.png"> <i>{total_
 
 <div class="cont">
 <div class="illhoe{random}">
-<div class="chunk6b">
-<div class="alert">
-<img src="/art/hoes.png"> <i>{one}</i> hoe{s} joined your business.
-</div>
-</div>
+<div class="join"><img src="/art/hoes.png"> <i>{one}</i> hoe{s} joined your business.</div>
+<!--<div class="chunk6b">
+	<div class="alert">
+	<img src="/art/hoes.png"> <i>{one}</i> hoe{s} joined your business.
+	</div>
+	</div>-->
 </div>
 <div class="clear"></div>
 </div>
@@ -699,11 +701,7 @@ Your hoes worked hard and farmed a total of <img src="/art/buxb.png"> <i>{total_
 
 <div class="cont">
 <div class="illleave{random}">
-<div class="chunk6a">
-<div class="alert">
-<img src="/art/hoes.png"> <i>{one}</i> hoe{s} left your business.
-</div>
-</div>
+<div class="leave"><img src="/art/scare.png"> <i>{one}</i> hoe{s} left your business.</div>
 </div>
 <div class="clear"></div>
 </div>
@@ -712,11 +710,7 @@ Your hoes worked hard and farmed a total of <img src="/art/buxb.png"> <i>{total_
 
 <div class="cont">
 <div class="illbro{random}">
-<div class="chunk6b">
-<div class="alert">
-<img src="/art/scare.png"> <i>{one}</i> bro{s} joined your business.
-</div>
-</div>
+<div class="join"><img src="/art/scare.png"> <i>{one}</i> bro{s} joined your business.</div>
 </div>
 <div class="clear"></div>
 </div>
