no longer allowed to trade with self

--- a/hoe-house/html/lua/plates.html
+++ b/hoe-house/html/lua/plates.html
@@ -1168,6 +1168,18 @@ $(document).ready(function() {
 	</div>
 </div>
 
+#trade_buy_fail_self
+
+<div class="cont">
+	<div class="chunk6d">
+		<div class="alert">
+			<img src="/art/fail.png"> You may not buy anything from yourself!
+		</div>
+
+	<div class="clear"></div>
+	</div>
+</div>
+
 #trade_buy_fail_cost
 
 <div class="cont">
