no more smiley. now help!

--- a/hoe-house/html/lua/plates.html
+++ b/hoe-house/html/lua/plates.html
@@ -78,7 +78,7 @@
 	<div class="chunk">
 		<div class="chunk1">
 			<div class="crum">
-				<div class="help"><a href="/help" target="_blank" title="Opens Help in a new page.">☺</a></div>
+				<div class="help"><a href="/help" target="_blank" title="Opens Help in a new page.">help!</a></div>
 				<div class="crumit">{crumbs}</div>
 			</div>
 		</div>
