--- a/hoe-house/html/lua/plates.html
+++ b/hoe-house/html/lua/plates.html
@@ -804,9 +804,9 @@ Click {action} to {action} this game.
 	<form class="notjNice" name="hoe_player_shop_form" id="hoe_player_shop_form" action="" method="POST" enctype="multipart/form-data">
 
 	<div id="buyit">
-		Buy <i><input type="text" name="houses" id="hoe_player_work_form_houses" value="0" style="width:100px;"/></i> <img src="/art/housesb.png"> houses at <img src="/art/buxb.png"> <i>{houses_bux}</i> bux each.
+		Buy <i><input type="text" name="houses" id="hoe_player_work_form_houses" value="0" style="width:100px;"/></i> <img src="/art/housesb.png"> houses at <img src="/art/buxb.png"> <i>{houses_bux}</i> bux each. (max 2)
 		<div class="formline1"></div>
-		Buy <i><input type="text" name="bros" id="hoe_player_work_form_bros" value="0" style="width:100px;"/></i> <img src="/art/scareb.png"> bros at <img src="/art/buxb.png"> <i>{bros_bux}</i> bux each.
+		Buy <i><input type="text" name="bros" id="hoe_player_work_form_bros" value="0" style="width:100px;"/></i> <img src="/art/scareb.png"> bros at <img src="/art/buxb.png"> <i>{bros_bux}</i> bux each. (max 1000)
 		<div class="formline1"></div>
 		Buy <i><input type="text" name="gloves" id="hoe_player_work_form_gloves" value="0" style="width:100px;"/></i> <img src="/art/glovesb.png"> gloves at <img src="/art/buxb.png"> <i>{gloves_bux}</i> bux each.
 		<div class="formline1"></div>
