--- a/hoe-house/html/lua/plates.html
+++ b/hoe-house/html/lua/plates.html
@@ -1047,6 +1047,7 @@ You do not have the {need} bux needed.
 			Only the best offer in each catagory is available to buy so you should consider selling for less than that price if you want a quick sell.<br />
 			Remember that your trade offer will sit in the queue for a random amount of time, possibly a couple of hours before it shows up for anyone to buy.<br />
 			You might want to keep checking this page in case someone is offering a good deal.
+			It costs you 1 energy to make a purchase so choose wisely.
 			</div>
 			</div>
 		</div>
@@ -1186,6 +1187,18 @@ $(document).ready(function() {
 	<div class="chunk6d">
 		<div class="alert">
 			<img src="/art/fail.png"> You cannot afford to buy that.
+		</div>
+
+	<div class="clear"></div>
+	</div>
+</div>
+
+#trade_buy_fail_energy
+
+<div class="cont">
+	<div class="chunk6d">
+		<div class="alert">
+			<img src="/art/fail.png"> It costs 1 energy to make a purchase.
 		</div>
 
 	<div class="clear"></div>
