trade parts where back to front

--- a/hoe-house/html/lua/plates.html
+++ b/hoe-house/html/lua/plates.html
@@ -1170,7 +1170,7 @@ $(function(){ tradeshowtab("all"); });
 <div class="cont">
 	<div class="chunk3a">
 		<div class="chunk3ait">
-			<br/><img src="/art/upoffer.png" width="30" height="30" /> Upcoming Offers<br/>
+			<br/><img src="/art/upoffer.png" width="30" height="30" /> Recent Offers<br/>
 		<div class="chunk3line"></div>
 		</div>
 		<div class="clear"></div>
